# px4ctl_syz

./: CMakeLists.txt  README.md  TagDetector.hpp  board.txt  package.xml  tag_det.cpp
launch/: l515.launch  mocap.launch  origin_ctl.launch  realsense_decompressed.launch  rviz.launch  tag_test.launch
scripts/: px4_l515_mocap.sh  px4_mocap.sh  rspx4_atlas.sh
src/: TagDetector.hpp  auto_catch_ctl.cpp  nbv_ctl.cpp  origin_ctl.cpp  simple_cmd_ctl.cpp  tag_aided_loc_node.cpp  tag_positioning_node.cpp  tag_servo_node.cpp
